@@ -1,3 +1,10 @@
+2011-08-30 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-75
+	* Add new tab in right lower panel with a list of Paths containing 
+	  the current sequence or module.
+	* Make the Path list tab browsable to expand the selected path.
+	* Make the "unresolved input tags" tab browsable to expand the selected module.
+	
 2011-08-24 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-74
 	* Change to TNSname connection string for Oracle connections. bug 86323.
